# privileges_elevation_helper

./: CMakeLists.txt  privileges_elevation_helper.c  readme.md
include/: privileges_elevation_helper.h
